--- a/login.html
+++ b/login.html
@@ -13,14 +13,27 @@
     <div id="login">
 
         <main>
-            <h4>Come ti piacerebbe usare Threads?</h4>
-        </main>
-
-        <div>
-            <div>
-                <p>Continua con Instagram</p>
+            <div id="L1">
+                <h4>Accedi con il tuo account Instagram</h4>
+                <input type="email" id="email" name="email" placeholder="Nome utente, telefono o email">
+                <input type="password" id="pass" name="password" placeholder="Password">
+                <button>Accedi</button>
+                <a href="#">Password dimenticata?</a>
+                <p>o</p>
             </div>
-        </div>
+            <div id="L2">
+                <img src="assets/img/imgs/instagram.avif" alt="immagine di instagram">
+                <p>Continua con Instagram</p>
+                <img src="assets/img/icons/right-arrow.png" alt="icona" style="width: 0.8em; height: 0.8em;">
+            </div>
+            <div id="L3">
+                <p>	&#169; 2023</p>
+                <p>Condizioni di Threads</p>
+                <p>Informativa sulla privacy</p>
+                <p>Normativa sui cookie</p>
+                <p>Segnala un problema</p>
+            </div>
+        </main>
     
     </div>
 </body>
