Visualizzazione dei posts nella homepage e pulsante more

--- a/main.html
+++ b/main.html
@@ -51,6 +51,25 @@
                 <button>Pubblica</button>
             </section>
 
+            <!-- ------------------- 1.2 SEZIONE DI VISUALIZZAZIONE POST ------------>
+            <div id="mainPosts"> 
+                
+                <!-- 
+                <div id="infoPosts">
+                    <div>
+                        <a href="#"><img src="assets/img/imgs/logo.png" alt="img"></a>
+                        <h3>nome utente</h3>
+                    </div>
+                    <div>
+                        <h5>1h</h5>
+                        <img src="assets/img/icons/more.png" alt="altro">
+                    </div>
+                </div>
+
+                <p>testo di prova</p> -->
+
+            </div>
+
             <!-- Modal -->
             <div id="myModal" class="modal">
                 <div class="modal-content">
